feat: update ADR 13
